--- a/prometheus1/prometheus.yml
+++ b/prometheus1/prometheus.yml
@@ -10,6 +10,10 @@ scrape_configs:
     metrics_path: '/metrics'
     static_configs:
       - targets: ['node_exporter:9100']
+  - job_name: 'cadvisor'
+    metrics_path: '/metrics'
+    static_configs:
+      - targets: ['cadvisor:8080']
 alerting:
   alertmanagers:
     - static_configs:
